--- a/bmi_FinalProject.Rmd
+++ b/bmi_FinalProject.Rmd
@@ -251,10 +251,23 @@ ggplot(table, aes(x = group1, y = mean)) +
                   position = position_dodge(.9))
 
 ghc_final <- ghc_final %>% 
+  mutate(cindex_cat = "severe")
+
+
+ghc_final$cindex_cat[which(ghc_final$cindex == 0)] <- "Normal"
+ghc_final$cindex_cat[which(ghc_final$cindex == 1 | 
+                              ghc_final$cindex == 2 )] <- "Mild"
+ghc_final$cindex_cat[which(ghc_final$cindex == 3 | 
+                              ghc_final$cindex == 4 )] <- "Moderate"
+
+ghc_final <- ghc_final %>% 
                 filter(Month != "December",
                        icu_flag == 0 ) %>%
                 dplyr::select(-patientid, -visitid, -postalcode, 
-                       -facilityzip, -date, -losdays2, -icu_flag, -group_mews)
+                       -facilityzip, -date, -losdays2, -icu_flag, -group_mews, -cindex)
+
+
+
 
 write_csv(ghc_final, "./BMI_FinalProject_cleandata_SAS.csv")
 
@@ -266,16 +279,16 @@ write_csv(ghc_final, "./BMI_FinalProject_cleandata_SAS.csv")
 
 ## This is a test with interactions ignore for now.
 
-FullModel <- glm(formula = log_losday ~ is30dayreadmit + cindex + evisit + 
-    ageyear + maritalstatus + facilityname + insurancetype + 
-    o2sat + temperature + heartrate + respirationrate + bpdiastolic + 
-    is30dayreadmit:cindex + is30dayreadmit:facilityname + 
-    is30dayreadmit:o2sat + evisit:ageyear + ageyear:maritalstatus + 
-    gender:heartrate + gender:bpdiastolic + 
-    facilityname:insurancetype + facilityname:respirationrate, 
-    data = ghc_final)
+#FullModel <- glm(formula = log_losday ~ is30dayreadmit + cindex + evisit + 
+#    ageyear + maritalstatus + facilityname + insurancetype + 
+#    o2sat + temperature + heartrate + respirationrate + bpdiastolic + 
+#    is30dayreadmit:cindex + is30dayreadmit:facilityname + 
+#    is30dayreadmit:o2sat + evisit:ageyear + ageyear:maritalstatus + 
+#    gender:heartrate + gender:bpdiastolic + 
+#    facilityname:insurancetype + facilityname:respirationrate, 
+#    data = ghc_final)
 
-step(FullModel, direction = "backward", test = "F")
+#step(FullModel, direction = "backward", test = "F")
 
 
 MainE_Model <- lm(formula = log_losday ~ . - Month, 
@@ -286,17 +299,18 @@ step(MainE_Model, direction = "backward")
 
 
 ## This is the output from criterion AIC selection
-MainE_Model <- glm(formula = log_losday ~ is30dayreadmit + cindex + evisit + 
-    ageyear + gender + maritalstatus + facilityname + insurancetype + 
-    bpsystolic + temperature + heartrate + respirationrate + 
-    bpdiastolic, data = ghc_final)
+MainE_Model <- glm(formula = log_losday ~ is30dayreadmit + evisit + ageyear + 
+    gender + maritalstatus + facilityname + insurancetype + bpsystolic + 
+    temperature + heartrate + respirationrate + bpdiastolic + 
+    cindex_cat, data = ghc_final)
 
 par(mfrow = c(2, 2))
 plot(MainE_Model)
 
 ## Ignore this while I ask Cody about what to do with CV
-cv.Full <- cv.glm(ghc_final, FullModel)
-cv.Full$delta
+
+#cv.Full <- cv.glm(ghc_final, FullModel)
+#cv.Full$delta
 
 cv.MainE_Model <- cv.glm(ghc_final, MainE_Model)
 cv.MainE_Model$delta
