--- a/bmi_FinalProject.Rmd
+++ b/bmi_FinalProject.Rmd
@@ -14,7 +14,7 @@ library(janitor)
 library(knitr)
 library(corrplot)
 library(tidyverse)
-library(plyr)
+
 
 ```
 
@@ -67,9 +67,10 @@ ghc %>%
 colnames(ghc)[c(5:8, 10, 12:18 )] ## These are categorical variables
 
 ghc_cate <- ghc %>% 
-  select(c(5:8, 10, 12:18 ))
+  select(c(5, 7, 8, 10, 13:18 )) ## removed admitdtm and postalcode from frequency table
 
-map(ghc_cate, plyr::count) ## categorical variables frequency table
+map(ghc_cate, plyr::count) 
+## categorical variables frequency table
 
 ```
 
