--- a/bmi_FinalProject.Rmd
+++ b/bmi_FinalProject.Rmd
@@ -8,6 +8,7 @@ output:
 ---
 
 ```{r load_libraris, message=FALSE, warning=FALSE}
+library(leaps)
 library(psych)
 library(boot)
 library(janitor)
@@ -68,6 +69,18 @@ map(ghc_cate, plyr::count) ## categorical variables frequency table
 ```
 
 
+```{r cleaning_vitals}
+
+## The smallest ever recorded BMI is 7 
+## Temperatures higher than 46 or 21 indicate death you are dying.
+
+ghc <- ghc %>%
+        filter(temperature < 46,
+               temperature > 21,
+               bmi > 10,
+               o2sat < 100)
+
+```
 
 ```{r exploratory_plots, message=FALSE, warning=FALSE, eval = TRUE, cache = T}
 
@@ -146,8 +159,6 @@ hist(log(ghc$bpdiastolic)) ## transformation may not need?
 
 hist(ghc$losdays2)
 hist(log(ghc$losdays2)) ## Transformation helps
-
-
 ```
 
 Besides these, I also tried several transformations with _evisit_, but none of them looks good.
@@ -264,8 +275,7 @@ ghc_final <- ghc_final %>%
                 filter(Month != "December",
                        icu_flag == 0 ) %>%
                 dplyr::select(-patientid, -visitid, -postalcode, 
-                       -facilityzip, -date, -losdays2, -icu_flag, -group_mews, -cindex)
-
+                       -facilityzip, -date, -losdays2, -icu_flag, -cindex)
 
 
 
@@ -276,25 +286,46 @@ write_csv(ghc_final, "./BMI_FinalProject_cleandata_SAS.csv")
 
 ```{r models}
 
-MainE_Model <- lm(formula = log_losday ~ . - Month, 
-    data = ghc_final)
+MainE_Model <- lm(formula = log_losday ~ is30dayreadmit + cindex_cat + evisit + 
+                    ageyear + gender + maritalstatus + facilityname + 
+                    insurancetype + bpsystolic + temperature + heartrate + o2sat +
+                    respirationrate + bpdiastolic, data = ghc_final)
+
 
 ## Criterion selection based on AIC
-step(MainE_Model, direction = "backward")
+step(MainE_Model, direction = "both")
 
+## These are all the remaining criterions
+best <- function(model, ...) 
+{
+  subsets <- regsubsets(formula(model), model.frame(model), ...)
+  subsets <- with(summary(subsets),
+                  cbind(p = as.numeric(rownames(which)), which, rss, rsq, adjr2, cp, bic))
+  
+  return(subsets)
+} 
 
-## This is the output from criterion AIC selection
-MainE_Model <- lm(formula = log_losday ~ is30dayreadmit + evisit + ageyear + 
-    gender + maritalstatus + facilityname + insurancetype + bpsystolic + 
-    temperature + heartrate + respirationrate + bpdiastolic + 
-    cindex_cat, data = ghc_final)
+## All of them tell you to use the full model with the exception of BIC which inidates a model of 8 variables. 
+
+best(MainE_Model, nvmax = 14)
+
+## This is the final model
+MainE_Model <- lm(formula = log_losday ~ is30dayreadmit + cindex_cat + evisit + 
+    ageyear + gender + maritalstatus + facilityname + insurancetype + 
+    bpsystolic + temperature + heartrate + o2sat + respirationrate + 
+    bpdiastolic, data = ghc_final)
 
 par(mfrow = c(2, 2))
 plot(MainE_Model)
 
 MainE_Model %>% broom::tidy() %>% kable(digits = 3)
 
+## This gives you the pvalues of testing the model with and without each variable
+drop1(MainE_Model, test = "F") %>% broom::tidy() %>% kable(digits = 3)
+
 ```
+
+
 
 ```{r influence_vif}
 
